[package]
name = "numscale"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Trait for scaling numeric types by a floating point number at compile-time"
repository = "https://github.com/sigurd4/numscale"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
